<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cinza"
    tools:context="com.janaissa.roteirando.AdicionarDicasActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_dica"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/branco"/>
            <ImageView
                android:layout_width="@dimen/ic_toolbar"
                android:layout_height="@dimen/ic_toolbar"
                android:src="@drawable/ic_add_dica"
                android:layout_marginLeft="7dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_destino"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_tipo"/>
    <EditText
        android:id="@+id/dica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_titulo"
        android:inputType="textCapSentences"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_prox"
        android:layout_margin="16dp"
        android:id="@+id/btn_prox"/>


</LinearLayout>
