<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cinza"
    tools:context="com.janaissa.roteirando.AdicionarRestauranteActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_dica"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/branco"/>
            <ImageView
                android:layout_width="@dimen/ic_toolbar"
                android:layout_height="@dimen/ic_toolbar"
                android:src="@drawable/ic_add_dica"
                android:layout_marginLeft="7dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="?attr/actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:id="@+id/destino"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:id="@+id/dica"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_periodo"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_manha"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_tarde"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_noite"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_cozinha"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@drawable/ic_arrow_down"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_valor"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="R$"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_avaliacao"/>
                <ImageView
                    android:layout_width="25dp"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:layout_marginLeft="7dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:layout_marginLeft="7dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:layout_marginLeft="7dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:layout_marginLeft="7dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:layout_marginLeft="7dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_obs"
                    android:layout_gravity="start"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
