<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#aaa"
    tools:context="com.janaissa.roteirando.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="right"
        android:title="@string/app_name"
        android:id="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/branco"/>
            <ImageView
                android:layout_width="@dimen/ic_toolbar"
                android:layout_height="@dimen/ic_toolbar"
                android:src="@drawable/mala"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/hint_buscar_dest"
            android:background="@drawable/bg_edit_text"
            android:padding="5dp"
            android:drawableLeft="@drawable/ic_lupa"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">
        <LinearLayout
            android:id="@+id/criar_roteiro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center|top">
            <ImageView
                android:layout_width="@dimen/ic_main"
                android:layout_height="@dimen/ic_main"
                android:src="@drawable/ic_criar_roteiro"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/btn_add_roteiro"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_dicas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center|top"
            android:padding="5dp">
            <ImageView
                android:layout_width="@dimen/ic_main"
                android:layout_height="@dimen/ic_main"
                android:src="@drawable/ic_add_dica"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/btn_add_dica"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/meus_roteiros"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center|top">
            <ImageView
                android:layout_width="@dimen/ic_main"
                android:layout_height="@dimen/ic_main"
                android:src="@drawable/ic_roteiros"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/btn_meus_roteiros"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>